--- a/frontend/src/components/Connect/Connect.css
+++ b/frontend/src/components/Connect/Connect.css
@@ -1,5 +1,11 @@
 .connect {
   padding-top: 5rem;
+
+  @media (min-width: 1440px) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 50px;
+  }
 }
 
 .email {
@@ -66,7 +72,6 @@
 }
 
 .connect__terms {
-  display: block;
   padding: 1rem 1.2rem 2rem;
   text-align: center;
 
