--- a/frontend/src/components/common/Title/Title.css
+++ b/frontend/src/components/common/Title/Title.css
@@ -1,14 +1,23 @@
 .title {
+  text-align: center;
   line-height: 2.5rem;
   font-weight: 700;
-  text-align: center;
   margin-bottom: 0.3rem;
   padding-left: 0.8rem;
   padding-right: 0.8rem;
 }
 
 .subtitle {
-  text-align: center;
-  margin-bottom: 2rem;
   color: var(--grey-text);
+  text-align: center;
+}
+
+.title__container {
+  margin-bottom: 2rem;
+}
+
+.title__email {
+  color: var(--lime-green);
+  text-align: center;
+  line-height: 1rem;
 }
