--- a/frontend/src/components/Verify/Verify.css
+++ b/frontend/src/components/Verify/Verify.css
@@ -1,5 +1,17 @@
 .verify {
   padding-top: 5rem;
+
+  @media (min-width: 1440px) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 50px;
+  }
+}
+
+.verify__section {
+  @media (min-width: 1440px) {
+    margin-top: 3rem;
+  }
 }
 
 .digits {
@@ -21,6 +33,10 @@
 .resend {
   text-align: center;
   padding: 1rem 1.2rem 2rem;
+
+  @media (min-width: 1440px) {
+    padding-bottom: 1.5rem;
+  }
 
   & span {
     color: var(--resend-blue);
