--- a/frontend/src/components/common/PlanOptions/PlanOptions.css
+++ b/frontend/src/components/common/PlanOptions/PlanOptions.css
@@ -7,6 +7,10 @@
   cursor: pointer;
   overflow: hidden;
 
+  @media (min-width: 1440px) {
+    grid-template-columns: repeat(1, minmax(0, 380px));
+  }
+
   &:hover {
     background: linear-gradient(
         to right,
@@ -17,6 +21,30 @@
       )
       border-box;
   }
+}
+
+.plan__container {
+  @media (min-width: 1440px) {
+    display: flex;
+    gap: 20px;
+  }
+}
+
+.plan__yearly {
+  position: relative;
+}
+
+.plan__discount {
+  position: absolute;
+  top: -22px;
+  right: 25px;
+  padding: 0.1rem 0.5rem;
+  background-color: var(--small-blue);
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: black;
 }
 
 .plan__input {
@@ -41,6 +69,11 @@
   width: 20px;
   height: 20px;
   border-radius: 50%;
+
+  @media (min-width: 1440px) {
+    width: 32px;
+    height: 32px;
+  }
 }
 
 .plan__circle--active {
@@ -54,6 +87,10 @@
 .plan__circle--empty {
   border: 1px solid white;
 
+  @media (min-width: 1440px) {
+    border-width: 2px;
+  }
+
   & img {
     display: none;
   }
@@ -62,6 +99,18 @@
 .plan__icon {
   width: 10px;
   height: 10px;
+
+  @media (min-width: 1440px) {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+.plan__info {
+  @media (min-width: 1024px) {
+    width: calc(100% - 68px);
+    text-align: center;
+  }
 }
 
 .plan__best {
@@ -85,20 +134,6 @@
   text-align: center;
 }
 
-.plan__discount {
-  width: fit-content;
-  margin-left: auto;
-  margin-right: 20px;
-  margin-bottom: -3px;
-  padding: 0.1rem 0.5rem;
-  background-color: var(--small-blue);
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  font-size: 0.9rem;
-  font-weight: 600;
-  color: black;
-}
-
 .plan__value {
   padding: 1.5rem 0 1.2rem;
 }
@@ -107,10 +142,19 @@
   font-weight: 500;
   margin-bottom: 0.8rem;
 
+  @media (min-width: 1440px) {
+    margin-bottom: 0.1rem;
+  }
+
   & span {
     font-size: 1.3rem;
     line-height: 1.3rem;
     font-weight: 700;
+
+    @media (min-width: 1440px) {
+      font-size: 1.5rem;
+      line-height: 1.5rem;
+    }
   }
 }
 
