--- a/frontend/src/components/common/SubmitButton/SubmitButton.css
+++ b/frontend/src/components/common/SubmitButton/SubmitButton.css
@@ -1,4 +1,5 @@
 .submitbutton {
+  display: block;
   width: 100%;
   padding: 1.2rem;
   line-height: 1.2rem;
@@ -8,6 +9,7 @@
   border-radius: 5px;
   background-color: var(--light-violet);
   font-family: inherit;
+  transition: opacity 0.25s ease;
 
   &:hover {
     opacity: 0.8;
@@ -16,4 +18,8 @@
 
 .submitbutton--yellow {
   background-color: var(--trial-yellow);
+  @media (min-width: 1440px) {
+    max-width: 70%;
+    margin: 0 auto;
+  }
 }
