--- a/frontend/src/components/Verify/Verify.css
+++ b/frontend/src/components/Verify/Verify.css
@@ -20,6 +20,7 @@
   padding: 0.5rem 0.5rem 0.5rem 0.8rem;
   font-size: 0.75rem;
   color: var(--light-violet);
+  background-color: transparent;
   border: 2px solid var(--light-violet);
   border-radius: 5px;
   cursor: pointer;
