--- a/frontend/src/components/ChoosePlan/ChoosePlan.css
+++ b/frontend/src/components/ChoosePlan/ChoosePlan.css
@@ -1,9 +1,35 @@
 .choose {
-  padding-top: 5rem;
-  padding-bottom: 1rem;
+  position: relative;
+  padding-top: 8rem;
 
   @media (min-width: 1440px) {
     padding-top: 1rem;
+  }
+}
+
+.choose__back {
+  position: absolute;
+  top: 20px;
+  left: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  background-color: var(--light-violet);
+  border-radius: 50%;
+  padding-bottom: 0.2rem;
+  font-size: 2rem;
+  font-weight: 700;
+  cursor: pointer;
+
+  @media (min-width: 1440px) {
+    left: -200px;
+  }
+
+  &:hover {
+    color: white;
+    border: 1px solid white;
   }
 }
 
