--- a/frontend/src/components/common/DigitInput/DigitInput.css
+++ b/frontend/src/components/common/DigitInput/DigitInput.css
@@ -1,7 +1,7 @@
 .digitinput {
   display: block;
   height: 55px;
-  border-radius: 5px;
+  border-radius: var(--small-radius);
   font-size: 1.8rem;
   text-align: center;
 
