--- a/frontend/src/components/Verify/Verify.css
+++ b/frontend/src/components/Verify/Verify.css
@@ -1,6 +1,6 @@
 .verify {
   position: relative;
-  padding-top: 8rem;
+  padding-top: 6rem;
 
   @media (min-width: 1440px) {
     display: grid;
@@ -8,6 +8,21 @@
     column-gap: 50px;
     padding-top: 1rem;
   }
+}
+
+.verify__code {
+  text-align: center;
+}
+
+.verify__code--bold {
+  font-size: 20px;
+  font-weight: var(--bold);
+  color: var(--trial-yellow);
+}
+
+.verify__countdown {
+  display: inline-block;
+  width: 30px;
 }
 
 .verify__back {
@@ -51,7 +66,7 @@
   flex-direction: column;
   align-items: center;
   padding: 1rem 1.2rem;
-  margin-bottom: 5rem;
+  margin-bottom: 1rem;
 }
 
 .digits__container {
