--- a/frontend/src/components/common/SubmitButton/SubmitButton.css
+++ b/frontend/src/components/common/SubmitButton/SubmitButton.css
@@ -1,7 +1,7 @@
 .submitbutton {
   display: block;
   width: 100%;
-  padding: 1.2rem;
+  height: 60px;
   line-height: 1.2rem;
   cursor: pointer;
   font-size: 1.2rem;
